--- a/Cpp01/ex03/Makefile
+++ b/Cpp01/ex03/Makefile
@@ -5,15 +5,15 @@
 #                                                     +:+ +:+         +:+      #
 #    By: ojebbari <ojebbari@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/01/11 10:53:24 by ojebbari          #+#    #+#              #
-#    Updated: 2024/01/22 12:25:23 by ojebbari         ###   ########.fr        #
+#    Created: 2024/01/21 00:49:44 by ojebbari          #+#    #+#              #
+#    Updated: 2024/01/21 08:47:09 by ojebbari         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRC = megaphone.cpp
+SRC = main.cpp HumanA.cpp HumanB.cpp Weapon.cpp
 CC = c++ 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME = megaphone
+NAME = Weapon
 RM = rm -fr
 OBJ = $(SRC:.cpp=.o)
 
@@ -32,21 +32,20 @@ WHITE		=	\e[37m
 
 all : $(NAME)
 
-%.o : %.cpp
-	@printf "$(CURSIVE)$(GRAY) 	- Making object file $@ from source file $< ... $(RESET)\n"
+%.o : %.cpp Weapon.hpp HumanA.hpp HumanA.hpp
+	@printf "$(CURSIVE)$(GRAY) 	- Making object file $(notdir $@) from source file $(notdir $<) ... $(RESET)\n"
 	@$(CC) $(CPPFLAGS)  -c $< -o $@
 
 $(NAME) : $(OBJ)
 	@printf "$(CURSIVE)$(GREEN)  	- Compiling :$(RESET)\n"
 	@printf "$(WHITE)\n"
-	@printf "$(RED)			 _____ ____________   _____  _____       __  _______   _______  _____ \n"
-	@printf "$(RED)			/  __ \| ___ \ ___ \ |  _  ||  _  |     / / |  ___\ \ / /  _  ||  _  |\n"
-	@printf "$(RED)			| /  \/| |_/ / |_/ / | |/' || |/' |    / /  | |__  \ V /| |/' || |/' |\n"
-	@printf "$(RED)			| |    |  __/|  __/  |  /| ||  /| |   / /   |  __| /   \|  /| ||  /| |\n"
-	@printf "$(RED)			| \__/\| |   | |     \ |_/ /\ |_/ /  / /    | |___/ /^\ \ |_/ /\ |_/ /\n"
-	@printf "$(RED)		 	 \____/\_|   \_|      \___/  \___/  /_/     \____/\/   \/\___/  \___/ \n"
+	@printf "$(RED)			 _____ ____________ _____  __      _________   _______  _____ \n"
+	@printf "$(RED)			/  __ \| ___ \ ___ \  _  |/  |    / /  ___\ \ / /  _  ||____ |\n"
+	@printf "$(RED)			| /  \/| |_/ / |_/ / |/' |\`| |   / /| |__  \ V /| |/' |    / /\n"
+	@printf "$(RED)			| |    |  __/|  __/|  /| | | |  / / |  __| /   \|  /| |    \ \ \n"
+	@printf "$(RED)			| \__/\| |   | |   \ |_/ /_| |_/ /  | |___/ /^\ \ |_/ /.___/ /\n"
+	@printf "$(RED)		 	 \____/\_|   \_|    \___/ \___/_/   \____/\/   \/\___/ \____/ \n"
 	@printf "$(WHITE)\n"
-
 	@$(CC) $(CPPFLAGS) $(OBJ) -o $@
 
 clean :
