--- a/cpp03/ex00/Makefile
+++ b/cpp03/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: ojebbari <ojebbari@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/29 10:11:46 by ojebbari          #+#    #+#              #
-#    Updated: 2024/01/31 11:14:26 by ojebbari         ###   ########.fr        #
+#    Updated: 2024/01/31 11:57:20 by ojebbari         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -39,12 +39,12 @@ all : $(NAME)
 $(NAME) : $(OBJ) ClapTrap.hpp
 	@printf "$(CURSIVE)$(GREEN)  	- Compiling :$(RESET)\n"
 	@printf "$(WHITE)\n"
-	@printf "$(RED)			 _____ ____________   _____  __        __  _______   _______  _____ \n"
-	@printf "$(RED)			/  __ \| ___ \ ___ \ |  _  |/  |      / / |  ___\ \ / /  _  ||  _  |\n"
-	@printf "$(RED)			| /  \/| |_/ / |_/ / | |/' | | |     / /  | |__  \ V /| |/' || |/' |\n"
-	@printf "$(RED)			| |    |  __/|  __/  |  /| | | |    / /   |  __| /   \|  /| ||  /| |\n"
-	@printf "$(RED)			| \__/\| |   | |     \ |_/ /_| |_  / /    | |___/ /^\ \ |_/ /\ |_/ /\n"
-	@printf "$(RED)		 	 \____/\_|   \_|      \___/ \___/ /_/     \____/\/   \/\___/  \___/ \n"
+	@printf "$(RED)			 _____ ____________   _____  _____       __  _______   _______  _____ \n"
+	@printf "$(RED)			/  __ \| ___ \ ___ \ |  _  ||____ |     / / |  ___\ \ / /  _  ||  _  |\n"
+	@printf "$(RED)			| /  \/| |_/ / |_/ / | |/' |    / /    / /  | |__  \ V /| |/' || |/' |\n"
+	@printf "$(RED)			| |    |  __/|  __/  | |/| |    \ \   / /   |  __| /   \|  /| || |/| |\n"
+	@printf "$(RED)			| \__/\| |   | |     \ |_/ /.___/ /  / /    | |___/ /^\ \ |_/ /\ |_/ /\n"
+	@printf "$(RED)		 	 \____/\_|   \_|      \___/ \____/  /_/     \____/\/   \/\___/  \___/  \n"
 	@printf "$(WHITE)\n"
 
 	@$(CC) $(CPPFLAGS) $(OBJ) -o $@
