--- a/cpp03/ex02/Makefile
+++ b/cpp03/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: ojebbari <ojebbari@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/01/29 10:12:19 by ojebbari          #+#    #+#              #
-#    Updated: 2024/01/31 10:42:05 by ojebbari         ###   ########.fr        #
+#    Updated: 2024/01/31 11:59:02 by ojebbari         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -32,19 +32,19 @@ WHITE		=	\e[37m
 
 all : $(NAME)
 
-%.o : %.cpp FragTrap.hpp
+%.o : %.cpp FragTrap.hpp ScavTrap.hpp
 	@printf "$(CURSIVE)$(GRAY) 	- Making object file $@ from source file $< ... $(RESET)\n"
 	@$(CC) $(CPPFLAGS)  -c $< -o $@
 
-$(NAME) : $(OBJ) FragTrap.hpp
+$(NAME) : $(OBJ) FragTrap.hpp ScavTrap.hpp
 	@printf "$(CURSIVE)$(GREEN)  	- Compiling :$(RESET)\n"
 	@printf "$(WHITE)\n"
-	@printf "$(RED)			 _____ ____________   _____  __        __  _______   _______  _____ \n"
-	@printf "$(RED)			/  __ \| ___ \ ___ \ |  _  |/  |      / / |  ___\ \ / /  _  ||  _  |\n"
-	@printf "$(RED)			| /  \/| |_/ / |_/ / | |/' | | |     / /  | |__  \ V /| |/' || |/' |\n"
-	@printf "$(RED)			| |    |  __/|  __/  |  /| | | |    / /   |  __| /   \|  /| ||  /| |\n"
-	@printf "$(RED)			| \__/\| |   | |     \ |_/ /_| |_  / /    | |___/ /^\ \ |_/ /\ |_/ /\n"
-	@printf "$(RED)		 	 \____/\_|   \_|      \___/ \___/ /_/     \____/\/   \/\___/  \___/ \n"
+	@printf "$(RED)			 _____ ____________   _____  _____       __  _______   _______  _____ \n"
+	@printf "$(RED)			/  __ \| ___ \ ___ \ |  _  ||____ |     / / |  ___\ \ / /  _  |/ __  \ \n"
+	@printf "$(RED)			| /  \/| |_/ / |_/ / | |/' |    / /    / /  | |__  \ V /| |/' |\`' / /'\n"
+	@printf "$(RED)			| |    |  __/|  __/  |  /| |    \ \   / /   |  __| /   \|  /| |  / /  \n"
+	@printf "$(RED)			| \__/\| |   | |     \ |_/ /.___/ /  / /    | |___/ /^\ \ |_/ /./ /___\n"
+	@printf "$(RED)		 	 \____/\_|   \_|      \___/ \____/  /_/     \____/\/   \/\___/ \_____/\n"
 	@printf "$(WHITE)\n"
 
 	@$(CC) $(CPPFLAGS) $(OBJ) -o $@
