--- a/Cpp07/ex01/Makefile
+++ b/Cpp07/ex01/Makefile
@@ -1,17 +1,17 @@
 SRC = main.cpp 
 CC = c++ 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME = whatever
+NAME = iter
 RM = rm -fr
 OBJ = $(SRC:.cpp=.o)
 
-all : $(NAME)
+all: $(NAME)
 
-%.o : %.cpp iter.hpp
-	@$(CC) $(CPPFLAGS)  -c $< -o $@
+%.o: %.cpp iter.hpp
+	$(CC) $(CPPFLAGS)  -c $< -o $@
 
-$(NAME) : $(OBJ) iter.hpp
-	@$(CC) $(CPPFLAGS) $(OBJ) -o $@
+$(NAME): $(OBJ) iter.hpp
+	$(CC) $(CPPFLAGS) $(OBJ) -o $@
 
 clean :
 	@$(RM) $(OBJ)
