--- a/Cpp07/ex02/Makefile
+++ b/Cpp07/ex02/Makefile
@@ -1,17 +1,17 @@
-SRC = main.cpp Array.cpp
+SRC =  main.cpp 
 CC = c++ 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME = whatever
+NAME = array
 RM = rm -fr
 OBJ = $(SRC:.cpp=.o)
 
 all : $(NAME)
 
-%.o : %.cpp Array.hpp
-	@$(CC) $(CPPFLAGS)  -c $< -o $@
+%.o : %.cpp Array.hpp Array.tpp
+	$(CC) $(CPPFLAGS)  -c $< -o $@
 
-$(NAME) : $(OBJ) Array.hpp
-	@$(CC) $(CPPFLAGS) $(OBJ) -o $@
+$(NAME) : $(OBJ) Array.hpp Array.tpp
+	$(CC) $(CPPFLAGS) $(OBJ) -o $@
 
 clean :
 	@$(RM) $(OBJ)
