Standardized folder names for proper sorting

--- a/Cpp07/ex02/Makefile
+++ b/Cpp07/ex02/Makefile
@@ -1,4 +1,4 @@
-SRC =  main.cpp 
+SRC = main.cpp 
 CC = c++ 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = array
@@ -7,7 +7,7 @@ OBJ = $(SRC:.cpp=.o)
 
 all : $(NAME)
 
-%.o : %.cpp Array.hpp Array.tpp
+%.o : %.cpp 
 	$(CC) $(CPPFLAGS)  -c $< -o $@
 
 $(NAME) : $(OBJ) Array.hpp Array.tpp
