--- a/Cpp08/ex01/Makefile
+++ b/Cpp08/ex01/Makefile
@@ -1,7 +1,7 @@
 SRC = main.cpp Span.cpp
 CC = c++ 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME = whatever
+NAME = Span
 RM = rm -fr
 OBJ = $(SRC:.cpp=.o)
 
@@ -10,7 +10,7 @@ all : $(NAME)
 %.o : %.cpp
 	$(CC) $(CPPFLAGS)  -c $< -o $@
 
-$(NAME) : $(OBJ) Span.cpp.hpp 
+$(NAME) : $(OBJ) Span.hpp
 	$(CC) $(OBJ) -o $@
 
 clean :
