--- a/Cpp08/ex02/Makefile
+++ b/Cpp08/ex02/Makefile
@@ -1,7 +1,7 @@
 SRC = main.cpp 
 CC = c++ 
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME = whatever
+NAME = MutantStack
 RM = rm -fr
 OBJ = $(SRC:.cpp=.o)
 
@@ -10,7 +10,7 @@ all : $(NAME)
 %.o : %.cpp
 	$(CC) $(CPPFLAGS)  -c $< -o $@
 
-$(NAME) : $(OBJ) MutantStack.hpp MutantStack.tpp
+$(NAME) : $(OBJ) MutantStack.hpp
 	$(CC) $(OBJ) -o $@
 
 clean :
